Add chickens to the top of the list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <br />
       <h2>Chicken List</h2>
 
-      <div class="chickenList"></div>
+      <ul class="chickenList"></ul>
 
     </section>
     <script src="index.js"></script>
