--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>People Factory</title>
+    <title>Rooster Roster</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css" rel="stylesheet"/>
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1>ROOSTER ROSTER</h1>
+      <img src="header.jpg" alt="Chickens" />
     </header>
 
     <section>
